tests/data/full-system/setup; create vm; change vm --public --forward4 tcp:443:443/in/etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Tue Jun 30 22:36:04 2015
*filter
:INPUT DROP [12974:2417628]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [20659380:29868589144]
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp --dport=22 -j ACCEPT
COMMIT
# Completed on Tue Jun 30 22:36:04 2015
# Generated by iptables-save v1.4.21 on Tue Jun 30 22:36:04 2015
*mangle
:PREROUTING ACCEPT [2739292:2266006898]
:INPUT ACCEPT [2739217:2265985708]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [20659316:29868583960]
:POSTROUTING ACCEPT [20661266:29868773139]
:connman-INPUT - [0:0]
:connman-POSTROUTING - [0:0]
-A INPUT -j connman-INPUT
-A POSTROUTING -j connman-POSTROUTING
-A connman-INPUT -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A connman-POSTROUTING -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
COMMIT
# Completed on Tue Jun 30 22:36:04 2015
# Generated by iptables-save v1.4.21 on Tue Jun 30 22:36:04 2015
*nat
:PREROUTING ACCEPT [10792:2223793]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [70035:3560884]
:POSTROUTING ACCEPT [70035:3560884]
COMMIT
# Completed on Tue Jun 30 22:36:04 2015
