tests/data/full-system/setup; create vm; change vm --public --forward4 tcp:443:443/in/etc/iptables/rules.v6
# Generated by ip6tables-save v1.4.21 on Tue Jun 30 22:36:04 2015
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Jun 30 22:36:04 2015
# Generated by ip6tables-save v1.4.21 on Tue Jun 30 22:36:04 2015
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Tue Jun 30 22:36:04 2015
# Generated by ip6tables-save v1.4.21 on Tue Jun 30 22:36:04 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -d ::1/128 ! -i lo -j DROP
-A INPUT -d fe80::/64 -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m multiport --dports 22 -j ACCEPT
-A INPUT -p udp -j REJECT --reject-with icmp6-port-unreachable
-A INPUT -j REJECT --reject-with icmp6-port-unreachable
-A FORWARD -j REJECT --reject-with icmp6-adm-prohibited
COMMIT
# Completed on Tue Jun 30 22:36:04 2015
